# hissbytenotation

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CHANGES.md  Makefile  Pipfile  README.md  data.py  pyproject.toml  pyproject.toml.org  temp_dict_module.py  tox.ini
.claude/: settings.local.json
.github/workflows/: build.yml  build_wheels.yml  publish_to_pypi.yml  release.yml  tox.yml
benchmark/: __main__.py  just_serialize.py  main.py  rust_only.py  temp_dict_module.py
data/: create_sample.py
docs/: TODO.md  installation.md
examples/: 01_basic_cli_usage.sh  02_shell_outputs_and_queries.sh  03_file_mutation_and_diff.sh
hissbytenotation/: __init__.py  __main__.py  deserialize_by_import.py  dump_to_json.py  install_hints.py  serialize_deserialize.py  supported_types.py
hissbytenotation/cli/: __init__.py  __main__.py  codecs.py  diff_ops.py  doctor.py  errors.py  glom_integration.py  merge_ops.py  presenters.py  repl.py
hissbytenotation/gui/: __init__.py  app.py  sample_data.py
model_code/: build_wheels.yml  ci.yml  publish_to_pypi.yml
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
spec/: phases.md  tkinter.md
test/: generate.py  test_cli_argparse.py  test_cli_phase1.py  test_cli_phase2.py  test_cli_phase3.py  test_cli_phase4.py  test_cli_phase5.py  test_hissbytenotation_api.py  test_json_interop.py  test_main.py  test_packaging.py  test_rust.py
